debootstick (2.6) unpublished; urgency=medium

  * Support for 4K native disks, and new --sector-size option
    (thanks to S.Fiala)
  * Fix support for migrating to NVMe devices (thanks to F.Lavratti)
  * Installer-mode: generic disk detection with lsblk

debootstick (2.5) unstable; urgency=medium

  * Validate support for Raspberry Pi 4
  * Handle user-defined disk layouts (idea of D.Muhamedagic)
  * Less aggressive guest cleanup function (thanks to Ken Gilmer)
  * Handle resize of FAT partitions
  * Improvement to state recovery in case of failure
  * GPT: Relocate secondary header when resizing last partition
  * Improve precision of size calculations
  * Restrict image permissions to 644 (thanks to Dejan Muhamedagic)
  * Handle latest guest OS versions
  * Makefile improvements (by Ken Gilmer and Etienne Dublé)
  * Improved /etc/resolv.conf handling
  * Grub: Preferably disable OS prober while building image
  * Obsolete code removal
  * Documentation updates

 -- Etienne Dublé <etienne.duble@gmail.com>  Mon, 2 Nov 2020 11:03:25 +0000

debootstick (2.4) unstable; urgency=medium

  * Just rebuild for upload to unstable.

 -- Etienne Dublé <etienne.duble@gmail.com>  Fri, 31 May 2019 18:01:03 +0000

debootstick (2.3) experimental; urgency=medium

  * Fix new LVM versions hanging in migration procedure (closes: Bug#928080).
  * Fix migration script sometimes failing (closes: Bug#929355).
  * Fix handling of chroots based on Ubuntu >= 18.04 (closes: Bug#929356).

 -- Etienne Dublé <etienne.duble@gmail.com>  Wed, 22 May 2019 13:56:42 +0000

debootstick (2.2) unstable; urgency=medium

  * Fix new LVM versions hanging in chroot (closes: Bug#923852).

 -- Etienne Dublé <etienne.duble@gmail.com>  Fri, 8 Mar 2019 13:48:03 +0000

debootstick (2.1) unstable; urgency=medium

  * Extensive tests.
  * Fix arch detection on some 32bits PC chroots.
  * Fix UEFI boot (obsolete rootfs label).
  * Fix filesystem expansion issues.
  * Update long description and README.md.
